--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-body {
+body,
+html,
+#root {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -6,9 +8,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  /* width: 100vw;
-  height: 100vh;
-  flex: 1; */
+  font-family: "Candara";
+  width: 100%;
+  height: 100%;
+  /* flex: 1; */
 }
 
 code {
