--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,19 @@
 .text-style {
   font-size: 1.2rem;
 }
+
+.text-style-header-JS {
+  font-size: 1.8rem;
+  background: -webkit-linear-gradient(yellow, gray);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text-style-header-Python {
+  font-size: 1.8rem;
+  background: -webkit-linear-gradient(yellow, blue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
