Updated 'AWS' header css styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,3 +17,11 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.text-style-header-AWS {
+  font-size: 1.8rem;
+  background: -webkit-linear-gradient(#fa7a08, gray);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
