Made reusable components for 'tech stack' section

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,7 @@
   -webkit-text-fill-color: transparent;
 }
 
-.text-style-header-Python {
+.text-style-header-Py {
   font-size: 1.8rem;
   background: -webkit-linear-gradient(yellow, blue);
   background-clip: text;
