--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,9 +12,73 @@ html,
   width: 100%;
   height: 100%;
   /* flex: 1; */
+
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Extra extra small devices (Like galaxy fold 300px and below) */
+@media all and (max-width: 300px) {
+  body,
+  html,
+  #root {
+    font-size: 11px;
+  }
+}
+
+/* Extra small devices (phones, between 400px and 600px) */
+@media all and (min-width: 300px) and (max-width: 600px) {
+  body,
+  html,
+  #root {
+    font-size: 13px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media all and (min-width: 600px) {
+  body,
+  html,
+  #root {
+    font-size: 14px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media all and (min-width: 768px) {
+  body,
+  html,
+  #root {
+    font-size: 16px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media all and (min-width: 992px) {
+  body,
+  html,
+  #root {
+    font-size: 16px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media all and (min-width: 1200px) {
+  body,
+  html,
+  #root {
+    font-size: 17px;
+  }
+}
+
+@media all and (min-width: 1600px) {
+  body,
+  html,
+  #root {
+    font-size: 18px;
+  }
 }
