--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,39 +30,47 @@
   -webkit-text-fill-color: transparent;
 }
 
-.project-card {
-  padding: 0;
-  border-radius: 3vh;
-  background-color: white;
-
-  /* Prevent bug of text overflowing to bottom */
-
-  max-height: 11rem;
-  min-width: 23rem;
-
-  margin: 1rem;
-  transition: 0.5s;
+.project-outer-card {
+  border: none;
 }
 
-.project-card:hover {
-  transition: 0.5s;
-  background-color: whitesmoke;
+.project-inner-card {
+  border-radius: 1.2rem;
+  flex: 1;
+  margin: 16px;
+  transition: 0.4s;
 }
 
-.project-image {
-  min-height: 11rem;
-  min-width: 10.6rem;
-  max-height: 11rem;
-  max-width: 10.6rem;
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border: 0.2px solid silver;
+.project-inner-card:hover {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.4s;
 }
 
-.project-name-font {
-  font-family: Candara;
+.project-card-body {
+  border-top: 0.2px solid whitesmoke;
+}
+
+.project-card-title {
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.project-inner-card:hover .project-card-title {
+  color: tomato;
+}
+
+.project-card-text {
+  font-size: 1rem;
+  height: 4rem;
+}
+
+.project-card-github {
+  color: gray;
+  margin-left: 10px;
+}
+
+.project-card-img {
+  width: 12rem;
+  height: 12rem;
+  align-self: center;
 }
