--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-.top-container-padding-top {
+.container-padding-top {
   padding-top: 20px;
 }
 
@@ -69,7 +69,7 @@
 
 .project-card-text {
   font-size: 1rem;
-  height: 4rem;
+  height: 6rem;
 }
 
 .project-card-github {
