#13 Changed some fonts

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,2 +1,2 @@
-@import url("//fonts.googleapis.com/css?family=Candara");
-@import url("//fonts.googleapis.com/css?family=Chewy");
+@import url("https://fonts.googleapis.com/css?family=Chewy");
+@import url("https://fonts.googleapis.com/css?family=Candara");
