--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,16 +61,17 @@
   border-radius: 1.2rem;
   flex: 1;
   margin: 16px;
-  transition: 0.4s;
+  transition: 0.3s;
+  overflow: hidden;
 }
 
 .project-inner-card:hover {
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.4s;
+  transition: 0.3s;
 }
 
 .project-card-img {
-  width: 12rem;
+  width: 14rem;
   height: 12rem;
   align-self: center;
 }
